--- a/gradle.properties
+++ b/gradle.properties
@@ -1,31 +1,31 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Mod Info
-maven_group = com.example
-archives_base_name = modid
-mod_version = 0.0.1
+maven_group = ca.objectobject.hexxycraft
+archives_base_name = hexxytweaks
+mod_version = 0.1.0
 
 minecraft_version = 1.19.2
 
 # Dependencies
 # https://fabricmc.net/develop
-fabric_loader_version = 0.14.11
-fabric_api_version = 0.67.0+1.19.2
+fabric_loader_version = 0.14.21
+fabric_api_version = 0.76.0+1.19.2
 
 # Mappings
 # https://lambdaurora.dev/tools/import_quilt.html
-qm_version = 21
+qm_version = 22
 # https://parchmentmc.org/docs/getting-started
 parchment_version = 2022.11.27
 
 # Create
 # https://modrinth.com/mod/create-fabric/versions
-create_version = 0.5.0.i-946+1.19.2
+create_version = 0.5.0.i-1017+1.19.2
 
 # Development QOL
 # Create supports all 3 recipe viewers: JEI, REI, and EMI. This decides which is enabled at runtime.
 # set to disabled to have none of them.
-recipe_viewer = unspecified
+recipe_viewer = EMI
 # JEI - https://www.curseforge.com/minecraft/mc-mods/jei/files/all
 jei_version = 11.5.2.1007
 # REI - https://modrinth.com/mod/roughly-enough-items/versions
