We have a custom domain, may as well use it

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Mod Info
-maven_group = ca.objectobject.hexxycraft
+maven_group = media.hexxy
 archives_base_name = hexxytweaks
 mod_version = 0.1.2
 
